fix hover spacing

--- a/src/public/app/app.component.styl
+++ b/src/public/app/app.component.styl
@@ -4,14 +4,11 @@
   justify-content: space-between
   li.nav-item
     flex: 1
-    
-.nav-item
-  padding: 10px 0px
-  
+
 .dropdown-menu
   min-width: 100%
   display: none
+  margin-top: 0px
 
 .dropdown:hover .dropdown-menu 
   display: block
-  top: 45px
